--- a/about.html
+++ b/about.html
@@ -34,9 +34,9 @@
       <div id="content">
         <p>
           Born and raised in Delhi, India I did my schooling from Delhi Public
-          School, NOIDA. Throughout education I always excelled at the academics
-          and participated in a number of extra curricular activities and was a
-          part of the student council both years of high school.
+          School, NOIDA. Throughout my education I always excelled at the
+          academics and participated in a number of extra curricular activities
+          and was a part of the student council both years of high school.
         </p>
 
         <img
@@ -61,10 +61,10 @@
         <p>
           On the achievements front, I have been awarded the top positions of
           Vedic Math National competitions for three years. In olympiads like
-          National Maths Olympiad, Mational Science Olympiad, and National
-          Search for Talent Examination, I have reached successive rounds and
-          have had ranks in the top 20. I cracked IIT JEE-Advanced 2018. I have
-          completed 60+ hours of Community Service with an NGO.
+          National Math Olympiad, Mational Science Olympiad, and National Search
+          for Talent Examination, I have reached successive rounds and have had
+          ranks in the top 20. I cracked IIT JEE-Advanced 2018. I have completed
+          80+ hours of Community Service with various NGOs.
         </p>
       </div>
 
