--- a/workEx.html
+++ b/workEx.html
@@ -28,7 +28,7 @@
 
       <div id="header" class="page">
         <br />
-        <h1>Poisitions Of Responsibility</h1>
+        <h1>Positions Of Responsibility</h1>
       </div>
 
       <div id="content">
