--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         <p>
           On the achievements front, I have been awarded the top positions of
           Vedic Math National competitions for three years. In olympiads like
-          National Math Olympiad, Mational Science Olympiad, and National Search
+          National Math Olympiad, National Science Olympiad, and National Search
           for Talent Examination, I have reached successive rounds and have had
           ranks in the top 20. I cracked IIT JEE-Advanced 2018. I have completed
           80+ hours of Community Service with various NGOs.
