--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </p>
 
       <ul id="nav">
-        <li><a href="/">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="workEx.html">Work Exp</a></li>
         <li><a href="contact.html">Contact</a></li>
